[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
humantime = "2.1.0"
maud = { version = "0.25.0", features = ["axum", "axum-core"] }
spacedust = "1.1.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
