[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = "0.4.31"
spacedust = { path = "./spacedust" }
humantime = "2.1.0"
maud = { version = "0.25.0", features = ["axum", "axum-core"] }
space-traders = "0.1.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
parking_lot = "0.12.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0.193", features = ["derive"] }
